Alterado nome do script principal para main - Adicionado novo esquema de animação global

--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -29,9 +29,14 @@
 					>Aula 04 - Comando switch, mapeamento e Date</a
 				>
 			</li>
+			<li>
+				<a href="javascript-aula5/index.html" class="link"
+					>Aula 05 - Manipulação avançada de eventos</a
+				>
+			</li>
 		</ul>
 
 		Voltar para a <a href="/index.html" class="link">Home</a><br />
-		<script src="/script.js"></script>
+		<script src="/main.js"></script>
 	</body>
 </html>
