--- a/exercicios-javascript/javascript-aula2/exercicio-10.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-10.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/exercicios-javascript/main.css" />
-        <link rel="stylesheet" href="./css/exercicio-10.css" />
-        <title>Exercicio 10</title>
-    </head>
-    <body id="content">
-        <div id="explicacao">
-            O objetivo deste exercício é criar uma lista e ir adicionando
-            topicos a cada vez que é clicado o botão adiciona.
-        </div>
-        <div id="exercicio">
-            <input id="texto" type="text" />
-            <button id="adiciona">adiciona</button>
-            <ul id="listaTarefas"></ul>
-        </div>
-        <nav id="linkNav">
-            Voltar para a <a href="./index.html" class="link"> Lista</a> <br />
-            Voltar para o
-            <a href="/exercicios-javascript/" class="link">Inicio</a>
-        </nav>
-        <script src="./js/exercicio-10.js"></script>
-        <script src="/script.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="./css/exercicio-10.css" />
+		<title>Exercicio 10</title>
+	</head>
+	<body id="content">
+		<div id="explicacao">
+			O objetivo deste exercício é criar uma lista e ir adicionando topicos a cada vez
+			que é clicado o botão adiciona.
+		</div>
+		<div id="exercicio">
+			<input id="texto" type="text" />
+			<button id="adiciona">adiciona</button>
+			<ul id="listaTarefas"></ul>
+		</div>
+		<nav id="linkNav">
+			Voltar para a <a href="./index.html" class="link"> Lista</a> <br />
+			Voltar para o
+			<a href="/exercicios-javascript/" class="link">Inicio</a>
+		</nav>
+		<script src="./js/exercicio-10.js"></script>
+		<script src="/main.js"></script>
+	</body>
 </html>
