--- a/exercicios-javascript/javascript-aula2/exercicio-7.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-7.html
@@ -1,64 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/exercicios-javascript/main.css" />
-        <link rel="stylesheet" href="./css/exercicio-7.css" />
-        <title>Exercicio 7</title>
-    </head>
-    <body id="content">
-        <div id="explicacao">
-            O objetivo desse Exercício é:
-            <ul>
-                <li>Uma página web de seleção de lanche</li>
-                <li>
-                    Quando a página abre, o primeiro lanche está pré-selecionado
-                </li>
-                <li>
-                    Ao clicar em outro lanche
-                    <ul>
-                        <li>o lanche que estava selecionado é desmarcado</li>
-                        <li>
-                            e no lugar dele fica marcado o lanche que foi
-                            clicado
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div id="container">
-            <div id="omelete" onclick="aplicaBorda(this)">
-                <img src="./img/exercicio-7/omelete.png" alt="Lanche Omelete" />
-            </div>
-            <div id="panquebanana" onclick="aplicaBorda(this)">
-                <img
-                    src="./img/exercicio-7/panquebanana.png"
-                    alt="Panqueca com Banana"
-                />
-            </div>
-            <div id="paoovo" onclick="aplicaBorda(this)">
-                <img src="./img/exercicio-7/paoovo.png" alt="Pão com Ovo" />
-            </div>
-            <div id="sandubatum" onclick="aplicaBorda(this)">
-                <img
-                    src="./img/exercicio-7/sandubatum.png"
-                    alt="Sanduiche de Atum"
-                />
-            </div>
-            <div id="vitabanana" onclick="aplicaBorda(this)">
-                <img
-                    src="./img/exercicio-7/vitabanana.png"
-                    alt="Vitamina de Banana"
-                />
-            </div>
-        </div>
-        <nav id="linkNav">
-            Voltar para a <a href="./index.html" class="link">Lista</a><br />
-            Voltar para o
-            <a href="/exercicios-javascript/" class="link">Inicio</a>
-        </nav>
-        <script src="./js/exercicio-7.js"></script>
-        <script src="/script.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="./css/exercicio-7.css" />
+		<title>Exercicio 7</title>
+	</head>
+	<body id="content">
+		<div id="explicacao">
+			O objetivo desse Exercício é:
+			<ul>
+				<li>Uma página web de seleção de lanche</li>
+				<li> Quando a página abre, o primeiro lanche está pré-selecionado </li>
+				<li>
+					Ao clicar em outro lanche
+					<ul>
+						<li>o lanche que estava selecionado é desmarcado</li>
+						<li> e no lugar dele fica marcado o lanche que foi clicado </li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		<div id="container">
+			<div id="omelete" onclick="aplicaBorda(this)">
+				<img src="./img/exercicio-7/omelete.png" alt="Lanche Omelete" />
+			</div>
+			<div id="panquebanana" onclick="aplicaBorda(this)">
+				<img src="./img/exercicio-7/panquebanana.png" alt="Panqueca com Banana" />
+			</div>
+			<div id="paoovo" onclick="aplicaBorda(this)">
+				<img src="./img/exercicio-7/paoovo.png" alt="Pão com Ovo" />
+			</div>
+			<div id="sandubatum" onclick="aplicaBorda(this)">
+				<img src="./img/exercicio-7/sandubatum.png" alt="Sanduiche de Atum" />
+			</div>
+			<div id="vitabanana" onclick="aplicaBorda(this)">
+				<img src="./img/exercicio-7/vitabanana.png" alt="Vitamina de Banana" />
+			</div>
+		</div>
+		<nav id="linkNav">
+			Voltar para a <a href="./index.html" class="link">Lista</a><br />
+			Voltar para o
+			<a href="/exercicios-javascript/" class="link">Inicio</a>
+		</nav>
+		<script src="./js/exercicio-7.js"></script>
+		<script src="/main.js"></script>
+	</body>
 </html>
