--- a/exercicios-javascript/javascript-aula2/exercicio-9.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-9.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/exercicios-javascript/main.css" />
-        <link rel="stylesheet" href="./css/exercicio-9.css" />
-        <title>Exercicio 9</title>
-    </head>
-    <body id="content">
-        <div id="explicacao">
-            O objetivo desse Exercício é:
-            <ul>
-                <li>Mostrar a interação entre Elementos</li>
-                <li>Manipulação de imagens por meio de JavaScript</li>
-                <li>Primeiro clique na Bomba para encher o Pneu</li>
-                <li>Depois clique na Roda para dar Partida!</li>
-            </ul>
-        </div>
-        <div id="exercicio">
-            <div id="container">
-                <div id="bomba">
-                    <img
-                        src="./img/exercicio-9/bomba.png"
-                        alt="Bomba de Carro"
-                    />
-                </div>
-                <div id="pneuMurcho">
-                    <img src="./img/exercicio-9/pneumurcho.png" alt="" />
-                    <div id="pneuCheio">
-                        <img
-                            src="./img/exercicio-9/pneu.png"
-                            alt="Pneu de Carro"
-                        />
-                    </div>
-                </div>
-            </div>
-        </div>
-        <nav id="linkNav">
-            Voltar para a <a href="./index.html" class="link">Lista</a><br />
-            Voltar para o
-            <a href="/exercicios-javascript/" class="link">Inicio</a>
-        </nav>
-        <script src="./js/exercicio-9.js"></script>
-        <script src="/script.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="./css/exercicio-9.css" />
+		<title>Exercicio 9</title>
+	</head>
+	<body id="content">
+		<div id="explicacao">
+			O objetivo desse Exercício é:
+			<ul>
+				<li>Mostrar a interação entre Elementos</li>
+				<li>Manipulação de imagens por meio de JavaScript</li>
+				<li>Primeiro clique na Bomba para encher o Pneu</li>
+				<li>Depois clique na Roda para dar Partida!</li>
+			</ul>
+		</div>
+		<div id="exercicio">
+			<div id="container">
+				<div id="bomba">
+					<img src="./img/exercicio-9/bomba.png" alt="Bomba de Carro" />
+				</div>
+				<div id="pneuMurcho">
+					<img src="./img/exercicio-9/pneumurcho.png" alt="" />
+					<div id="pneuCheio">
+						<img src="./img/exercicio-9/pneu.png" alt="Pneu de Carro" />
+					</div>
+				</div>
+			</div>
+		</div>
+		<nav id="linkNav">
+			Voltar para a <a href="./index.html" class="link">Lista</a><br />
+			Voltar para o
+			<a href="/exercicios-javascript/" class="link">Inicio</a>
+		</nav>
+		<script src="./js/exercicio-9.js"></script>
+		<script src="/main.js"></script>
+	</body>
 </html>
