--- a/exercicios-javascript/javascript-aula3/index.html
+++ b/exercicios-javascript/javascript-aula3/index.html
@@ -21,6 +21,6 @@
 			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
 			Ir para minha <a href="/index.html" class="link">Home</a>
 		</nav>
-		<script src="/script.js"></script>
+		<script src="/main.js"></script>
 	</body>
 </html>
