--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 		</ul>
 
 		Conforme sigo estudando, continuarei atualizando essa página!
-		<script src="/script.js"></script>
+		<script src="/main.js"></script>
 	</body>
 </html>
