--- a/exercicios-javascript/javascript-aula2/exercicio-1.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-1.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/exercicios-javascript/main.css" />
-        <title>Exercício 1</title>
-    </head>
-    <body id="content">
-        <div id="explicacao">
-            O objetivo deste exercício é incrementar atributos e valores em um
-            objeto chamado "visitante" e depois exibi-lo através do
-            console.log().
-        </div>
-        <button id="executa">executa</button><br />
-        <nav id="linkNav">
-            Voltar para a <a href="./index.html" class="link">Lista</a><br />
-            Voltar para o
-            <a href="/exercicios-javascript/" class="link">Inicio</a>
-        </nav>
-        <script src="./js/exercicio-1.js"></script>
-        <script src="/script.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<title>Exercício 1</title>
+	</head>
+	<body id="content">
+		<div id="explicacao">
+			O objetivo deste exercício é incrementar atributos e valores em um objeto chamado
+			"visitante" e depois exibi-lo através do console.log().
+		</div>
+		<button id="executa">executa</button><br />
+		<nav id="linkNav">
+			Voltar para a <a href="./index.html" class="link">Lista</a><br />
+			Voltar para o
+			<a href="/exercicios-javascript/" class="link">Inicio</a>
+		</nav>
+		<script src="./js/exercicio-1.js"></script>
+		<script src="/main.js"></script>
+	</body>
 </html>
