--- a/exercicios-javascript/javascript-aula2/exercicio-2.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-2.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/exercicios-javascript/main.css" />
-        <link rel="stylesheet" href="./css/exercicio-2.css" />
-        <title>Exercício 2</title>
-    </head>
-    <body id="content">
-        <div id="explicacao">
-            O objetivo desse Exercício é mostrar o comportamento dinâmico de
-            cliques em um elemento com JavaScript
-        </div>
-        <p id="paragrafo">Clique em Mim</p>
-        <nav id="linkNav">
-            Voltar para a <a href="./index.html" class="link">Lista</a><br />
-            Voltar para o
-            <a href="/exercicios-javascript/" class="link">Inicio</a>
-        </nav>
-        <script src="./js/exercicio-2.js"></script>
-        <script src="/script.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="./css/exercicio-2.css" />
+		<title>Exercício 2</title>
+	</head>
+	<body id="content">
+		<div id="explicacao">
+			O objetivo desse Exercício é mostrar o comportamento dinâmico de cliques em um
+			elemento com JavaScript
+		</div>
+		<p id="paragrafo">Clique em Mim</p>
+		<nav id="linkNav">
+			Voltar para a <a href="./index.html" class="link">Lista</a><br />
+			Voltar para o
+			<a href="/exercicios-javascript/" class="link">Inicio</a>
+		</nav>
+		<script src="./js/exercicio-2.js"></script>
+		<script src="/main.js"></script>
+	</body>
 </html>
