--- a/exercicios-javascript/javascript-aula2/exercicio-3.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-3.html
@@ -41,6 +41,6 @@
       Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
     </nav>
     <script src="./js/exercicio-3.js"></script>
-    <script src="/script.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
