--- a/exercicios-javascript/javascript-aula2/exercicio-6.html
+++ b/exercicios-javascript/javascript-aula2/exercicio-6.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/exercicios-javascript/main.css" />
-        <link rel="stylesheet" href="./css/exercicio-6.css" />
-        <title>Exercício 6</title>
-    </head>
-    <body id="content">
-        <div id="explicacao">
-            O objetivo desse Exercício é:
-            <ul>
-                <li>Manipular o estilo dos elementos por meio de JavaScript</li>
-                <li>Clique nas cores para alterar o visual do texto ao lado</li>
-            </ul>
-        </div>
-        <div id="exercicio">
-            <div id="cores">
-                Cores Fundo
-                <div id="caixaCoresFundo">
-                    <div class="caixinhaCor"></div>
-                    <div class="caixinhaCor"></div>
-                    <div class="caixinhaCor"></div>
-                    <div class="caixinhaCor"></div>
-                </div>
-                Cores Fonte
-                <div id="caixaCoresFonte">
-                    <div class="caixinhaCor"></div>
-                    <div class="caixinhaCor"></div>
-                    <div class="caixinhaCor"></div>
-                    <div class="caixinhaCor"></div>
-                </div>
-            </div>
-            <div id="texto">
-                <h2>Texto h2</h2>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Sint reprehenderit cumque deleniti placeat optio
-                    perspiciatis unde voluptate commodi, animi cum vero quaerat
-                    nemo alias dolore veritatis magni? Ipsa, earum veniam.
-                </p>
-            </div>
-        </div>
-        <nav id="linkNav">
-            Voltar para a <a href="./index.html" class="link">Lista</a><br />
-            Voltar para o
-            <a href="/exercicios-javascript/" class="link">Inicio</a>
-        </nav>
-        <script src="./js/exercicio-6.js"></script>
-        <script src="/script.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<link rel="stylesheet" href="./css/exercicio-6.css" />
+		<title>Exercício 6</title>
+	</head>
+	<body id="content">
+		<div id="explicacao">
+			O objetivo desse Exercício é:
+			<ul>
+				<li>Manipular o estilo dos elementos por meio de JavaScript</li>
+				<li>Clique nas cores para alterar o visual do texto ao lado</li>
+			</ul>
+		</div>
+		<div id="exercicio">
+			<div id="cores">
+				Cores Fundo
+				<div id="caixaCoresFundo">
+					<div class="caixinhaCor"></div>
+					<div class="caixinhaCor"></div>
+					<div class="caixinhaCor"></div>
+					<div class="caixinhaCor"></div>
+				</div>
+				Cores Fonte
+				<div id="caixaCoresFonte">
+					<div class="caixinhaCor"></div>
+					<div class="caixinhaCor"></div>
+					<div class="caixinhaCor"></div>
+					<div class="caixinhaCor"></div>
+				</div>
+			</div>
+			<div id="texto">
+				<h2>Texto h2</h2>
+				<p>
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint
+					reprehenderit cumque deleniti placeat optio perspiciatis unde voluptate
+					commodi, animi cum vero quaerat nemo alias dolore veritatis magni? Ipsa,
+					earum veniam.
+				</p>
+			</div>
+		</div>
+		<nav id="linkNav">
+			Voltar para a <a href="./index.html" class="link">Lista</a><br />
+			Voltar para o
+			<a href="/exercicios-javascript/" class="link">Inicio</a>
+		</nav>
+		<script src="./js/exercicio-6.js"></script>
+		<script src="/main.js"></script>
+	</body>
 </html>
