--- a/exercicios-javascript/javascript-aula3/exercicio-8.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-8.html
@@ -27,6 +27,6 @@
 			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 		</nav>
 		<script src="./js/exercicio-8.js"></script>
-		<script src="/script.js"></script>
+		<script src="/main.js"></script>
 	</body>
 </html>
