--- a/exercicios-javascript/javascript-aula3/exercicio-9.html
+++ b/exercicios-javascript/javascript-aula3/exercicio-9.html
@@ -32,6 +32,6 @@
 			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 		</nav>
 		<script src="./js/exercicio-9.js"></script>
-		<script src="/script.js"></script>
+		<script src="/main.js"></script>
 	</body>
 </html>
