--- a/exercicios-javascript/javascript-aula4/exercicio-10.html
+++ b/exercicios-javascript/javascript-aula4/exercicio-10.html
@@ -40,6 +40,6 @@
 			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 		</nav>
 		<script src="./js/exercicio-10.js"></script>
-		<script src="/script.js"></script>
+		<script src="/main.js"></script>
 	</body>
 </html>
