--- a/exercicios-javascript/javascript-aula4/exercicio-5.html
+++ b/exercicios-javascript/javascript-aula4/exercicio-5.html
@@ -44,6 +44,6 @@
 			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 		</nav>
 		<script src="./js/exercicio-5.js"></script>
-		<script src="/script.js"></script>
+		<script src="/main.js"></script>
 	</body>
 </html>
