--- a/exercicios-javascript/javascript-aula4/exercicio-9-obj.html
+++ b/exercicios-javascript/javascript-aula4/exercicio-9-obj.html
@@ -28,6 +28,6 @@
 			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a>
 		</nav>
 		<script src="./js/exercicio-9 objetos.js"></script>
-		<script src="/script.js"></script>
+		<script src="/main.js"></script>
 	</body>
 </html>
