Melhorado sistema de animação e transição de páginas

--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -34,6 +34,11 @@
 					>Aula 05 - Manipulação avançada de eventos</a
 				>
 			</li>
+			<li>
+				<a href="javascript-aula6/index.html" class="link"
+					>Aula 06 - DOM avançado, closure e dataset</a
+				>
+			</li>
 		</ul>
 
 		Voltar para a <a href="/index.html" class="link">Home</a><br />
