--- a/exercicios-javascript/javascript-aula2/index.html
+++ b/exercicios-javascript/javascript-aula2/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body id="content">
 		Aula 02 - Fundamentos de objetos e DOM <br />
-		Segue abaixo a lista de Exercicios da Aula 2 de JavaScript:
+		Segue abaixo a lista de Exercicios práticos da Aula 2 de JavaScript:
 		<nav>
 			<ul>
 				<li><a href="./exercicio-1.html" class="link">Exercício 1</a></li>
