--- a/exercicios-javascript/javascript-aula3/index.html
+++ b/exercicios-javascript/javascript-aula3/index.html
@@ -7,7 +7,7 @@
 		<title>Exercícios Aula 3 JavaScript</title>
 	</head>
 	<body id="content">
-		Segue abaixo a lista de Exercicios da Aula 3 de JavaScript:
+		Segue abaixo a lista de Exercicios práticos da Aula 3 de JavaScript:
 		<nav>
 			<ul>
 				<li><a href="./exercicio-3.html" class="link">Exercício 3</a></li>
