--- a/exercicios-javascript/javascript-aula4/index.html
+++ b/exercicios-javascript/javascript-aula4/index.html
@@ -7,7 +7,7 @@
 		<title>Exercícios Aula 4 JavaScript</title>
 	</head>
 	<body id="content">
-		Segue abaixo a lista de Exercicios da Aula 4 de JavaScript:
+		Segue abaixo a lista de Exercicios práticos da Aula 4 de JavaScript:
 		<nav>
 			<ul>
 				<li><a href="./exercicio-5.html" class="link">Exercício 5</a></li>
