--- a/exercicios-javascript/javascript-aula5/index.html
+++ b/exercicios-javascript/javascript-aula5/index.html
@@ -7,7 +7,7 @@
 		<title>Exercícios Aula 5 JavaScript</title>
 	</head>
 	<body id="content">
-		Segue abaixo a lista de Exercicios da Aula 5 de JavaScript:
+		Segue abaixo a lista de Exercicios práticos da Aula 5 de JavaScript:
 		<nav>
 			<ul>
 				<li><a href="./exercicio-1.html" class="link">Exercício 1</a></li>
@@ -24,5 +24,6 @@
 			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
 			Ir para minha <a href="/index.html" class="link">Home</a>
 		</nav>
+		<script src="/main.js"></script>
 	</body>
 </html>
