--- a/exercicios-javascript/javascript-aula1/index.html
+++ b/exercicios-javascript/javascript-aula1/index.html
@@ -9,7 +9,7 @@
 	<body id="content">
 		Aula 01 - Tipos de Dados, Expressões e Variáveis
 		<br />
-		Segue abaixo a lista de Exercicios da Aula 1 de JavaScript:
+		Segue abaixo a lista de Exercicios práticos da Aula 1 de JavaScript:
 		<nav>
 			<ul>
 				<li><a href="./exercicio-i18n.html" class="link">Exercício 1</a></li>
